# rust-web-starter

./: Cargo.toml  LICENSE  README.md
docs/: refs.txt
src/: config.rs  handlers.rs  logger.rs  main.rs
