[package]
name = "www"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
time = { version = "0.3", features = ["std", "formatting", "macros"] }
actix-web = "4"
scylla = "0.12.0"
tracing="0.1.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "std",
  "time",
] }
tracing-appender = "0.2.3"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
